--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -72,7 +72,7 @@ Para entender un poco más acerca de la problemática a la que se enfrenta el al
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=13cm, height=5cm]{./images/crecimientoNube.jpg}
+\includegraphics[width=13cm, height=5cm]{./images/crecimientoNube.JPG}
 \caption{Crecimiento global del tráfico en la nube}
 \label{fig:1-1-1}
 \end{figure}
@@ -81,7 +81,7 @@ Una de las principales razones del incremento en el tamaño en la estructura de 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=15cm, height=7cm]{./images/duplicacion.jpg}
+\includegraphics[width=15cm, height=7cm]{./images/duplicacion.JPG}
 \caption{Duplicación de Archivos en la Nube}
 \label{fig:1-1-2}
 \end{figure}
@@ -186,6 +186,9 @@ Aqu\'i se describe el análisis del protocolo criptográfico, el cual se compone
 
 \item Capítulo 5 \textbf{Diseño} \\
 El capítulo de diseño tiene como contenido la especificación de la plataforma del protocolo, es decir, la especificación de recursos necesarios para poder llevar a cabo su implementación con las herramientas necesarias, y también todos los casos de usos que involucran el funcionamiento de dicho protocolo.
+
+\item Capítulo 6 \textbf{Desarrollo} \\
+El capítulo de desarrollo tiene como contenido la información detallada de cada uno de los módulos que se desarrollaron para la implementación del protocolo, se explica primero el código de cada módulo de cifrado, descifrado, duplicación, servidor de llaves y de la integración a la interfaz web. También se presentan las pantallas principales y ejemplos del uso de la aplicación.
 
 \end{itemize}
 
