--- a/TT-2016-B045/archivosTex/preliminares.tex
+++ b/TT-2016-B045/archivosTex/preliminares.tex
@@ -18,7 +18,7 @@ Esta ciencia que mantiene la información segura se encuentra dividida en dos ti
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=10cm, height=5cm]{./images/Cripto_Simetrica.jpg}
+\includegraphics[width=10cm, height=5cm]{./images/Cripto_Simetrica.JPG}
 \caption{Diagrama de Criptografía Simétrica.}
 \label{fig:2-3-1}
 \end{figure}
@@ -29,7 +29,7 @@ La \textit{ criptografía asimétrica} o criptografía de llave pública involuc
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=10cm, height=5cm]{./images/Cripto_Asimetrica.jpg}
+\includegraphics[width=10cm, height=5cm]{./images/Cripto_Asimetrica.JPG}
 \caption{Diagrama de Criptografía Asimétrica.}
 \label{fig:2-4-1}
 \end{figure}
